Set jvm options for Spark to work